public/styles/style.css
/* ... */
.memberPicture {
    width: 190px;
    height: 190px;
}

.memberPicture img {
    width: 190px;
}

.teamName {
    margin-top: 12px;
    color: yellow;
    text-transform: uppercase;
    font-size: 1rem;
    text-align: center;
}

.teamRole {
    color: white;
    font-size: 1rem;
    text-align: center;
    max-width: 190px;
}

.jobPicture {
    transition-property: display, opacity, height;
    transition-duration: 0.4s;
    margin-top: 8px;
    width: 190px;
    height: 0;
    display: none;
    opacity: 0;
    text-align: center;
}

.teamMember:hover .jobPicture {
    height: 90px;
    display: block;
    opacity: 1;
}

.jobPicture img {
    width: 190px;
}

.allPage {
    width: 100%;
    height: 100%;
    background-color: #131313;
}

.donotshow,
.offScreen {
    position: absolute;
    z-index: 20;
    top: -1000px;
    left: -1000px;
    width: 10px;
    height: 10px;
}

/*.navbar-expand-lg {*/
/*    margin-top: 100px;*/

/*}*/

.navbar-expand-lg.navbar-light.bg-dark {
    padding-top: 120px;
    /*max-width: 80%;*/
}

/*.navbar-collapse.collapse {*/
/*    opacity: 0;*/
/*}*/

/*@keyframes collapseFadeIn {*/
/*    0% {*/
/*        opacity: 0;*/
/*    }*/
/*    100% {*/
/*        opacity: 1;*/
/*    }*/
/*}*/

/*.faded {*/
/*    opacity: 0.2;*/
/*}*/

/*.navbar-collapse.collapse.show {*/
/*    animation: 0.3s ease-out 0s 1 collapseFadeIn;*/
/*    opacity: 1;*/
/*}*/

.navbar-light .navbar-toggler {
    color: #1d2121;
    border: 1px solid #222;
    border-radius: 6px;
    padding: 4px;
}

.navbar-toggler-icon {
    background-image: url(../images/toggle.png) !important;
}

.show .navbar-nav-scroll .links,
.show .navbar-nav-scroll .links a {
    font-size: 1.7rem !important;
    padding: 8px 0 !important;
}

.show .navbar-light.navbar-text a,
.show .yellowHover {
    padding: 0 !important;
}

@keyframes fadeOut {
    0% {
        opacity: 1;
    }
    100% {
        opacity: 0.5;
    }
}

.fade-out {
    animation: 0.3s ease-out 0s 1 fadeOut;
    opacity: 0.5;
}

@keyframes fadeIn {
    0% {
        opacity: 0.5;
    }
    100% {
        opacity: 1;
    }
}

/*.faded {*/
/*    opacity: 0.2;*/
/*}*/

.fade-in {
    animation: 0.3s ease-out 0s 1 fadeIn;
    opacity: 1;
}

.grey666 {
    color: #666 !important;
}

.grey999 {
    color: #999;
    font-size: 75%;
}

/*.navbar-toggler.collapsed {*/
/*    visibility: visible;*/
/*}*/
.skip {
    color: yellow;
    background-color: black;
    float: right;
    transform: skewX(-6deg);
    padding: 4px 14px;
    border: 1px solid white;
    margin-right: 20px;
}

.skip div {
    transform: skewX(6deg);
}
.mobileImages {
    height: 180px;
    width: 33%;
}
.welcomeBackground {
    background: #202020;
}
.welcome {
    display: flex;
    justify-content: center;
    font-size: 500%;
    font-family: Wrong, sans-serif;
    padding-top: 10%;
}
.welcomeSub {
    font-family: Mulish, sans-serif;
    font-size: 1.2vw;
    margin-top: -2%;
    width: 70%;
}
.empireSub {
    font-family: Mulish, sans-serif;
    font-size: 1.2vw;
    margin-top: -2%;
    width: 70%;
}
.browseSub {
    font-family: Mulish, sans-serif;
    font-size: 1.2vw;
    margin-top: -2%;
    width: 76%;
    margin-left: 15%;
}
.summary {
    padding: 15px;
    font-size: 20px;
}
.button {
    border: 1px #a69d0a solid;
    border-radius: 50px;
    font-weight: bold;
    color: black;
    background: #fae901;
    padding-left: 10%;
    padding-right: 10%;
    padding-top: 3%;
    padding-bottom: 3%;
    box-shadow: 0px 0px 15px yellow;
    font-size: 120%;
}
.buttonSeed {
    border: 1px #f7f8f8 solid;
    border-radius: 50px;
    font-weight: bold;
    color: black;
    background: #f7f8f8;
    padding-left: 10%;
    padding-right: 10%;
    padding-top: 3%;
    padding-bottom: 3%;
    box-shadow: 0px 0px 15px #f7f8f8;
    font-size: 120%;
    margin-left: -24%;
}
.corePool {
    border: black solid;
    background: #ecdc00;
}
.seedPool {
    border: black solid;
    background: #6512af;
}
.stakingPools {
    padding: 15px;
    font-size: x-large;
}
.coins {
    padding-top: 30%;
}
.social {
    justify-content: space-evenly;
    display: flex;
    font-size: larger;
}
.title {
    display: flex;
    justify-content: flex-start;
    font-size: 500%;
    font-family: Wrong, sans-serif;
    padding-top: 10%;
}
.titleRight {
    display: flex;
    justify-content: flex-end;
    font-size: 500%;
    font-family: Wrong, sans-serif;
    padding-top: 10%;
}

.textRight {
    font-size: 100%;
    text-align: end;
}
.empireButton {
    border: 1px #a69d0a solid;
    border-radius: 50px;
    font-weight: bold;
    color: black;
    background: #fae901;
    padding-left: 5%;
    padding-right: 5%;
    padding-top: 1%;
    padding-bottom: 1%;
    box-shadow: 0px 0px 15px yellow;
    font-size: 110%;
}
.exchanges {
    margin-left: -57%;
    margin-top: -2%;
}
.exchanges img {
    height: 40px !important;
}
.exchanges a {
    padding: 0 3px;
}

.footerNote {
    color: #884;
    font-size: 84%;
    background-color: #00000040;
    padding: 14px;
    max-width: 400px;
    margin: 0 auto;
}

.footerNote a {
    text-decoration: none !important;
}
.footer {
    width: 100%;
    border-top: 1px solid;
    border-color: #ffdd0080 !important ;
    background: black;
    margin-top: 50px;
    padding-bottom: 100px;
}

.seed-container .footer {
    border-color: #7b16db80 !important;
}
.bit-smaller {
    font-size: 90%;
}
b,
.bold {
    font-family: ModecoBold, sans-serif !important;
}

.light {
    font-family: ModecoLight, sans-serif !important;
}
.two-columns {
    clear: both;
    padding: 0 12px;
    font-size: 0.9rem;
}

.two-columns:last-child {
    margin-bottom: 18px;
}

.two-columns-left {
    float: left;
}

.two-columns-right {
    float: right;
}
.joinUs {
    font-family: Mulish, sans-serif;
    display: "inline";
    padding-right: 20;
}
.mulish {
    font-family: Mulish, sans-serif;
}

